--- a/package.json
+++ b/package.json
@@ -10,13 +10,23 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@types/is-hotkey": "^0.1.10",
+    "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
+    "is-hotkey": "^0.2.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "reactflow": "^11.10.4",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
