--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cmdk": "^0.2.1",
     "is-hotkey": "^0.2.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "reactflow": "^11.10.4",
