--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "postcss-import": "^16.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
