--- a/package.json
+++ b/package.json
@@ -51,5 +51,11 @@
     "postcss-import": "^16.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "standard-version": {
+    "skip": {
+      "commit": true,
+      "tag": true
+    }
   }
 }
