--- a/.github/workflows/vercel.yml
+++ b/.github/workflows/vercel.yml
@@ -21,7 +21,7 @@ jobs:
         name: Install pnpm
         id: pnpm-install
         with:
-          version: 7
+          version: latest
           run_install: false
       - name: Install Vercel CLI
         run: pnpm add --global vercel@latest
