--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@types/is-hotkey": "^0.1.10",
+    "@types/semver": "^7.5.8",
     "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
@@ -34,6 +35,7 @@
     "react-markdown": "^9.0.1",
     "reactflow": "^11.10.4",
     "recoil": "^0.7.7",
+    "semver": "^7.6.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
