--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pages-router",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -56,8 +56,8 @@
   },
   "standard-version": {
     "skip": {
-      "commit": true,
-      "tag": true
+      "commit": false,
+      "tag": false
     }
   }
 }
