--- a/package.json
+++ b/package.json
@@ -8,6 +8,13 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LeandroCesarr/crow-erd.git"
+  },
+  "bugs": {
+    "url": "https://github.com/LeandroCesarr/crow-erd/issues"
+  },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
